--- a/templates/BackEnd/back.html.twig
+++ b/templates/BackEnd/back.html.twig
@@ -7,7 +7,8 @@
 		{% block title %}Welcome!
 		{% endblock %}
 	</title>
-	<link href="assets/assetsFront/img/favicon.png" rel="icon">
+	<link href="{{asset('assets/assetsFront/img/favicon.png') }}" rel="icon">
+
 
 	{% block stylesheets %}
 
@@ -16,15 +17,15 @@
 		href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
 		rel="stylesheet" />
 
-	<link href="assets/assetsBack/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-	<link href="assets/assetsBack/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" />
-	<link href="assets/assetsBack/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
-	<link href="assets/assetsBack/vendor/quill/quill.snow.css" rel="stylesheet" />
-	<link href="assets/assetsBack/vendor/quill/quill.bubble.css" rel="stylesheet" />
-	<link href="assets/assetsBack/vendor/remixicon/remixicon.css" rel="stylesheet" />
-	<link href="assets/assetsBack/vendor/simple-datatables/style.css" rel="stylesheet" />
-
-	<link href="assets/assetsBack/css/style.css" rel="stylesheet" />
+		<link href="{{ asset('assets/assetsBack/vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet" />
+		<link href="{{ asset('assets/assetsBack/vendor/bootstrap-icons/bootstrap-icons.css') }}" rel="stylesheet" />
+		<link href="{{ asset('assets/assetsBack/vendor/boxicons/css/boxicons.min.css') }}" rel="stylesheet" />
+		<link href="{{ asset('assets/assetsBack/vendor/quill/quill.snow.css') }}" rel="stylesheet" />
+		<link href="{{ asset('assets/assetsBack/vendor/quill/quill.bubble.css') }}" rel="stylesheet" />
+		<link href="{{ asset('assets/assetsBack/vendor/remixicon/remixicon.css') }}" rel="stylesheet" />
+		<link href="{{ asset('assets/assetsBack/vendor/simple-datatables/style.css') }}" rel="stylesheet" />
+	
+		<link href="{{ asset('assets/assetsBack/css/style.css') }}" rel="stylesheet" />
 
 	{% endblock %}
 	{% block javascripts %}{% endblock %}
@@ -36,7 +37,7 @@
 	<header id="header" class="header fixed-top d-flex align-items-center">
 		<div class="d-flex align-items-center justify-content-between">
 			<a href="index.html" class="logo d-flex align-items-center">
-				<img src="assets/assetsBack/img/logo.png" alt="">
+				<img src="{{ asset('assets/assetsBack/img/logo.png') }}" alt="">
 			</a>
 			<i class="bi bi-list toggle-sidebar-btn"></i>
 		</div>
@@ -50,7 +51,8 @@
 				</li>
 				<li class="nav-item dropdown pe-3">
 					<a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-						<img src="assets/assetsBack/img/profile.png" alt="Profile" class="rounded-circle">
+						<img src="{{ asset('assets/assetsBack/img/profile.png') }}" alt="Profile" class="rounded-circle">
+
 						<span class="d-none d-md-block dropdown-toggle ps-2">Administrateur</span>
 					</a>
 					<ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
@@ -256,15 +258,17 @@
 	
 	<a href="#" class="back-to-top d-flex align-items-center justify-content-center"> <i class="bi bi-arrow-up-short"></i></a><!-- Vendor JS Files -->
 	
-	<script src="assets/assetsBack/vendor/apexcharts/apexcharts.min.js"></script>
-	<script src="assets/assetsBack/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-	<script src="assets/assetsBack/vendor/chart.js/chart.umd.js"></script>
-	<script src="assets/assetsBack/vendor/echarts/echarts.min.js"></script>
-	<script src="assets/assetsBack/vendor/quill/quill.js"></script>
-	<script src="assets/assetsBack/vendor/simple-datatables/simple-datatables.js"></script>
-	<script src="assets/assetsBack/vendor/tinymce/tinymce.min.js"></script>
-	<script src="assets/assetsBack/vendor/php-email-form/validate.js"></script><!-- Template Main JS File -->
-	<script src="assets/assetsBack/js/main.js"></script>
+	<script src="{{ asset('assets/assetsBack/vendor/apexcharts/apexcharts.min.js') }}"></script>
+	<script src="{{ asset('assets/assetsBack/vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+	<script src="{{ asset('assets/assetsBack/vendor/chart.js/chart.umd.js') }}"></script>
+	<script src="{{ asset('assets/assetsBack/vendor/echarts/echarts.min.js') }}"></script>
+	<script src="{{ asset('assets/assetsBack/vendor/quill/quill.js') }}"></script>
+	<script src="{{ asset('assets/assetsBack/vendor/simple-datatables/simple-datatables.js') }}"></script>
+	<script src="{{ asset('assets/assetsBack/vendor/tinymce/tinymce.min.js') }}"></script>
+	<script src="{{ asset('assets/assetsBack/vendor/php-email-form/validate.js') }}"></script>
+	
+	<script src="{{ asset('assets/assetsBack/js/main.js') }}"></script>
+	
 </body>
 
 </html>
