--- a/templates/FrontEnd/front.html.twig
+++ b/templates/FrontEnd/front.html.twig
@@ -6,26 +6,28 @@
 			{% block title %}Welcome!
 			{% endblock %}
 		</title>
-		<link href="assets/assetsFront/img/favicon.png" rel="icon">
+		<link href="{{ asset('assets/assetsFront/img/favicon.png') }}" rel="icon">
+
 
 		{% block stylesheets %}
-			<!-- Fonts -->
-			<link href="https://fonts.googleapis.com" rel="preconnect">
-			<link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-			<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Marcellus:wght@400&display=swap" rel="stylesheet">
-
-			<link href="assets/assetsFront/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-			<link href="assets/assetsFront/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-			<link href="assets/assetsFront/vendor/aos/aos.css" rel="stylesheet">
-			<link href="assets/assetsFront/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-			<link href="assets/assetsFront/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-			<link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet">
-			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
-			<!-- Main CSS File -->
-			<link href="assets/assetsFront/css/main.css" rel="stylesheet">
-		{% endblock %}
+		<!-- Fonts -->
+		<link href="https://fonts.googleapis.com" rel="preconnect">
+		<link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Marcellus:wght@400&display=swap" rel="stylesheet">
+	
+		<link href="{{ asset('assets/assetsFront/vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
+		<link href="{{ asset('assets/assetsFront/vendor/bootstrap-icons/bootstrap-icons.css') }}" rel="stylesheet">
+		<link href="{{ asset('assets/assetsFront/vendor/aos/aos.css') }}" rel="stylesheet">
+		<link href="{{ asset('assets/assetsFront/vendor/swiper/swiper-bundle.min.css') }}" rel="stylesheet">
+		<link href="{{ asset('assets/assetsFront/vendor/glightbox/css/glightbox.min.css') }}" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+		<link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+	
+		<!-- Main CSS File -->
+		<link href="{{ asset('assets/assetsFront/css/main.css') }}" rel="stylesheet">
+	{% endblock %}
+	
 
 		{% block javascripts %}{% endblock %}
 
@@ -39,7 +41,7 @@
 
 				<!-- Logo -->
 				<a href="" class="logo d-flex align-items-center">
-					<img src="assets/assetsFront/img/logo.png" alt="AgriWise">
+					<img src="{{ asset('assets/assetsFront/img/logo.png') }}" alt="AgriWise">
 				</a>
 
 			<!-- Navigation -->
@@ -217,12 +219,11 @@
 			<a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center">
 				<i class="bi bi-arrow-up-short"></i>
 			</a>
-
-			<script src="assets/assetsFront/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-			<script src="assets/assetsFront/vendor/php-email-form/validate.js"></script>
-			<script src="assets/assetsFront/vendor/aos/aos.js"></script>
-			<script src="assets/assetsFront/vendor/swiper/swiper-bundle.min.js"></script>
-			<script src="assets/assetsFront/vendor/glightbox/js/glightbox.min.js"></script>
-			<script src="assets/assetsFront/js/main.js"></script>
+ <script src="{{ asset('assets/assetsFront/vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+    <script src="{{ asset('assets/assetsFront/vendor/php-email-form/validate.js') }}"></script>
+    <script src="{{ asset('assets/assetsFront/vendor/aos/aos.js') }}"></script>
+    <script src="{{ asset('assets/assetsFront/vendor/swiper/swiper-bundle.min.js') }}"></script>
+    <script src="{{ asset('assets/assetsFront/vendor/glightbox/js/glightbox.min.js') }}"></script>
+    <script src="{{ asset('assets/assetsFront/js/main.js') }}"></script>
 		</body>
 	</html>
