--- a/templates/FrontEnd/front.html.twig
+++ b/templates/FrontEnd/front.html.twig
@@ -10,24 +10,25 @@
 
 
 		{% block stylesheets %}
-		<!-- Fonts -->
-		<link href="https://fonts.googleapis.com" rel="preconnect">
-		<link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Marcellus:wght@400&display=swap" rel="stylesheet">
-	
-		<link href="{{ asset('assets/assetsFront/vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
-		<link href="{{ asset('assets/assetsFront/vendor/bootstrap-icons/bootstrap-icons.css') }}" rel="stylesheet">
-		<link href="{{ asset('assets/assetsFront/vendor/aos/aos.css') }}" rel="stylesheet">
-		<link href="{{ asset('assets/assetsFront/vendor/swiper/swiper-bundle.min.css') }}" rel="stylesheet">
-		<link href="{{ asset('assets/assetsFront/vendor/glightbox/css/glightbox.min.css') }}" rel="stylesheet">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-		<link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet">
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-	
-		<!-- Main CSS File -->
-		<link href="{{ asset('assets/assetsFront/css/main.css') }}" rel="stylesheet">
-	{% endblock %}
-	
+			<!-- Fonts -->
+			<link href="https://fonts.googleapis.com" rel="preconnect">
+			<link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+			<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Marcellus:wght@400&display=swap" rel="stylesheet">
+
+			<link href="{{ asset('assets/assetsFront/vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
+			<link href="{{ asset('assets/assetsFront/vendor/bootstrap-icons/bootstrap-icons.css') }}" rel="stylesheet">
+			<link href="{{ asset('assets/assetsFront/vendor/aos/aos.css') }}" rel="stylesheet">
+			<link href="{{ asset('assets/assetsFront/vendor/swiper/swiper-bundle.min.css') }}" rel="stylesheet">
+			<link href="{{ asset('assets/assetsFront/vendor/glightbox/css/glightbox.min.css') }}" rel="stylesheet">
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+			<link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet">
+			<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
+			<!-- Main CSS File -->
+			<link href="{{ asset('assets/assetsFront/css/main.css') }}" rel="stylesheet">
+		{% endblock %}
+
 
 		{% block javascripts %}{% endblock %}
 
@@ -44,29 +45,29 @@
 					<img src="{{ asset('assets/assetsFront/img/logo.png') }}" alt="AgriWise">
 				</a>
 
-			<!-- Navigation -->
-<nav id="navmenu" class="navmenu">
-    <ul>
-        <li>
-            <a href="{{ path('app_acceuil') }}" class="{% if app.request.attributes.get('_route') == 'app_acceuil' %}active{% endif %}">
-                Acceuil
-            </a>
-        </li>
-        <li>
-            <a href="{{ path('app_about') }}" class="{% if app.request.attributes.get('_route') == 'app_about' %}active{% endif %}">
-                Qui sommes nous
-            </a>
-        </li>
-        <li>
-            <a href="{{ path('app_services') }}" class="{% if app.request.attributes.get('_route') == 'app_services' %}active{% endif %}">
-                Services
-            </a>
-        </li>
-        <li>
-            <button href="#" class="btn btn-primary px-4">Se connecter</button>
-        </li>
-    </ul>
-</nav>
+				<!-- Navigation -->
+				<nav id="navmenu" class="navmenu">
+					<ul>
+						<li>
+							<a href="{{ path('app_acceuil') }}" class="{% if app.request.attributes.get('_route') == 'app_acceuil' %}active{% endif %}">
+								Acceuil
+							</a>
+						</li>
+						<li>
+							<a href="{{ path('app_about') }}" class="{% if app.request.attributes.get('_route') == 'app_about' %}active{% endif %}">
+								Qui sommes nous
+							</a>
+						</li>
+						<li>
+							<a href="{{ path('app_services') }}" class="{% if app.request.attributes.get('_route') == 'app_services' %}active{% endif %}">
+								Services
+							</a>
+						</li>
+						<li>
+							<button href="#" class="btn btn-primary px-4">Se connecter</button>
+						</li>
+					</ul>
+				</nav>
 
 				<i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
 			</div>
@@ -102,11 +103,26 @@
 							<span>Matériels</span>
 						</a>
 					</li>
+
 					<li class="sidebar-item">
-						<a href="#" class="sidebar-link">
+						<a href="#" class="sidebar-link collapsed" data-bs-toggle="collapse" data-bs-target="#multi-two" aria-expanded="false" aria-controls="multi-two">
 							<i class="lni lni-leaf"></i>
 							<span>Gestion Agricole</span>
 						</a>
+						<ul id="multi-two" class="sidebar-dropdown  collapse">
+							<li class="sidebar-item">
+								<a href="{{ path('app_parcelle_index') }}">Parcelles</a>
+							</li>
+							<li class="sidebar-item">
+								<a href="{{ path('app_culture_index') }}">Cultures</a>
+							</li>
+							<li class="sidebar-item">
+								<a href="{{ path('app_culture_index') }}">Récoltes</a>
+							</li>
+							<li class="sidebar-item">
+								<a href="{{ path('app_culture_index') }}">Activités</a>
+							</li>
+						</ul>
 					</li>
 					<li class="sidebar-item">
 						<a href="#" class="sidebar-link">
@@ -219,11 +235,11 @@
 			<a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center">
 				<i class="bi bi-arrow-up-short"></i>
 			</a>
- <script src="{{ asset('assets/assetsFront/vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
-    <script src="{{ asset('assets/assetsFront/vendor/php-email-form/validate.js') }}"></script>
-    <script src="{{ asset('assets/assetsFront/vendor/aos/aos.js') }}"></script>
-    <script src="{{ asset('assets/assetsFront/vendor/swiper/swiper-bundle.min.js') }}"></script>
-    <script src="{{ asset('assets/assetsFront/vendor/glightbox/js/glightbox.min.js') }}"></script>
-    <script src="{{ asset('assets/assetsFront/js/main.js') }}"></script>
+			<script src="{{ asset('assets/assetsFront/vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+			<script src="{{ asset('assets/assetsFront/vendor/php-email-form/validate.js') }}"></script>
+			<script src="{{ asset('assets/assetsFront/vendor/aos/aos.js') }}"></script>
+			<script src="{{ asset('assets/assetsFront/vendor/swiper/swiper-bundle.min.js') }}"></script>
+			<script src="{{ asset('assets/assetsFront/vendor/glightbox/js/glightbox.min.js') }}"></script>
+			<script src="{{ asset('assets/assetsFront/js/main.js') }}"></script>
 		</body>
 	</html>
