--- a/templates/BackEnd/back.html.twig
+++ b/templates/BackEnd/back.html.twig
@@ -157,15 +157,15 @@
 				</a>
 				<ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
 				<li>
-					<a href="tables-general.html">
-						<i class="bi bi-circle"></i>
-						<span>General Tables</span>
+					<a href="{{ path('app_parcelle_back') }}">
+						<i class="bi bi-pin-map"></i>
+							<span>Liste des parcelles</span>
 					</a>
 				</li>
 				<li>
-					<a href="tables-data.html">
-						<i class="bi bi-circle"></i>
-						<span>Data Tables</span>
+					<a href="{{ path('app_culture_back') }}">
+						<i class="ri-leaf-line"></i>
+						<span>Liste des cultures</span>
 					</a>
 				</li>
 			</ul>
