--- a/templates/BackEnd/back.html.twig
+++ b/templates/BackEnd/back.html.twig
@@ -168,6 +168,12 @@
 						<span>Liste des cultures</span>
 					</a>
 				</li>
+				<li>
+					<a href="{{ path('app_recolte_back') }}">
+						<i class="ri-leaf-fill"></i>
+							<span>Liste des récoltes</span>
+					</a>
+				</li>
 			</ul>
 			</li>
 		
