--- a/templates/FrontEnd/front.html.twig
+++ b/templates/FrontEnd/front.html.twig
@@ -117,7 +117,7 @@
 								<a href="{{ path('app_culture_index') }}">Cultures</a>
 							</li>
 							<li class="sidebar-item">
-								<a href="{{ path('app_culture_index') }}">Récoltes</a>
+								<a href="{{ path('app_recolte_index') }}">Récoltes</a>
 							</li>
 							<li class="sidebar-item">
 								<a href="{{ path('app_culture_index') }}">Activités</a>
