--- a/templates/culture/index.html.twig
+++ b/templates/culture/index.html.twig
@@ -44,7 +44,7 @@
                         </tr>                        
                         {% else %}
                             <tr>
-                                <td colspan="6" class="text-center">No records found</td>
+                                <td colspan="6" class="text-center">Aucun enregistrement trouvé</td>
                             </tr>
                         {% endfor %}
                     </tbody>
