--- a/templates/culture/listCulturesBackend.html.twig
+++ b/templates/culture/listCulturesBackend.html.twig
@@ -18,7 +18,6 @@
                             <th>Durée</th>
                             <th>Statut</th>
                             <th>Parcelle</th>
-                            <th>Actions</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -29,19 +28,11 @@
                             <td>{{ culture.dateSemis ? culture.dateSemis|date('Y-m-d') : '' }}</td>
                             <td>{{ culture.duree }}</td>
                             <td>{{ culture.statut | capitalize }}</td>
-                            <td>{{ culture.parcelle.nom }}</td> <!-- Display parcelle nom -->
-                            <td>
-                                <a href="{{ path('app_culture_show', {'id': culture.id}) }}" class="btn btn-info btn-sm" role="button">
-                                    <i class="bi bi-eye"></i> Show
-                                </a>
-                                <a href="{{ path('app_culture_edit', {'id': culture.id}) }}" class="btn btn-warning btn-sm" role="button">
-                                    <i class="bi bi-pencil"></i> Edit
-                                </a>
-                            </td>
+                            <td>{{ culture.parcelle.nom }}</td> 
                         </tr>                        
                         {% else %}
                             <tr>
-                                <td colspan="6" class="text-center">No records found</td>
+                                <td colspan="6" class="text-center">Aucun enregistrement trouvé</td>
                             </tr>
                         {% endfor %}
                     </tbody>
