--- a/templates/parcelle/listParcellesBackend.html.twig
+++ b/templates/parcelle/listParcellesBackend.html.twig
@@ -18,7 +18,6 @@
                             <th>Localisation</th>
                             <th>Type Sol</th>
                             <th>Utilisateur Id</th>
-                            <th>Actions</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -30,18 +29,10 @@
                                 <td>{{ parcelle.localisation }}</td>
                                 <td>{{ parcelle.typeSol | capitalize }}</td> 
                                 <td>{{ parcelle.utilisateurId }}</td>
-                                <td>
-                                    <a href="{{ path('app_parcelle_show', {'id': parcelle.id}) }}" class="btn btn-info btn-sm" role="button">
-                                        <i class="bi bi-eye"></i> Show
-                                    </a>
-                                    <a href="{{ path('app_parcelle_edit', {'id': parcelle.id}) }}" class="btn btn-warning btn-sm" role="button">
-                                        <i class="bi bi-pencil"></i> Edit
-                                    </a>
-                                </td>
                             </tr>
                         {% else %}
                             <tr>
-                                <td colspan="7" class="text-center">No records found</td>
+                                <td colspan="7" class="text-center">Aucun enregistrement trouvé</td>
                             </tr>
                         {% endfor %}
                     </tbody>
