--- a/templates/FrontEnd/front.html.twig
+++ b/templates/FrontEnd/front.html.twig
@@ -120,7 +120,7 @@
 								<a href="{{ path('app_recolte_index') }}">Récoltes</a>
 							</li>
 							<li class="sidebar-item">
-								<a href="{{ path('app_culture_index') }}">Activités</a>
+								<a href="{{ path('app_activite_index') }}">Activités</a>
 							</li>
 						</ul>
 					</li>
