--- a/templates/BackEnd/back.html.twig
+++ b/templates/BackEnd/back.html.twig
@@ -174,6 +174,12 @@
 							<span>Liste des récoltes</span>
 					</a>
 				</li>
+				<li>
+					<a href="{{ path('app_activite_back') }}">
+						<i class="bi bi-activity"></i>
+							<span>Liste des activités</span>
+					</a>
+				</li>
 			</ul>
 			</li>
 		
