--- a/templates/culture/index.html.twig
+++ b/templates/culture/index.html.twig
@@ -12,7 +12,7 @@
                 </a>
             </div>
             <div class="card-body">
-                <table class="table table-bordered table-striped">
+                <table class="table table-bordered table-striped table-hover ">
                     <thead>
                         <tr>
                             <th>#</th>
@@ -32,7 +32,7 @@
                             <td>{{ culture.dateSemis ? culture.dateSemis|date('Y-m-d') : '' }}</td>
                             <td>{{ culture.duree }}</td>
                             <td>{{ culture.statut | capitalize }}</td>
-                            <td>{{ culture.parcelle.nom }}</td> <!-- Display parcelle nom -->
+                            <td>{{ culture.parcelle.nom }}</td>
                             <td>
                                 <a href="{{ path('app_culture_show', {'id': culture.id}) }}" class="btn btn-info btn-sm" role="button">
                                     <i class="bi bi-eye"></i> Show
