--- a/templates/parcelle/index.html.twig
+++ b/templates/parcelle/index.html.twig
@@ -12,8 +12,7 @@
                 </a>
             </div>
             <div class="card-body">
-                <table class="table table-bordered table-striped">
-                    <thead>
+                <table class="table table-bordered table-striped table-hover ">                    <thead>
                         <tr>
                             <th>#</th>
                             <th>Nom</th>
