--- a/templates/parcelle/listParcellesBackend.html.twig
+++ b/templates/parcelle/listParcellesBackend.html.twig
@@ -9,8 +9,7 @@
                 <h5 class="card-title mb-0">Liste des Parcelles</h5>
             </div>
             <div class="card-body">
-                <table class="table table-bordered table-striped">
-                    <thead>
+                <table class="table table-bordered table-striped table-hover ">                    <thead>
                         <tr>
                             <th>#</th>
                             <th>Nom</th>
