--- a/templates/parcelle/_delete_form.html.twig
+++ b/templates/parcelle/_delete_form.html.twig
@@ -1,4 +1,6 @@
-<form method="post" action="{{ path('app_parcelle_delete', {'id': parcelle.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form action="{{ path('app_parcelle_delete', {'id': parcelle.id}) }}" method="post" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cette parcelle ?');" style="display: inline;">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ parcelle.id) }}">
-    <button class="btn btn-danger">Delete</button>
+    <button type="submit" class="btn btn-danger">
+        <i class="bi bi-trash"></i> Supprimer
+    </button>
 </form>
