--- a/templates/parcelle/_form.html.twig
+++ b/templates/parcelle/_form.html.twig
@@ -31,17 +31,11 @@
             {{ form_widget(form.typeSol, { 'attr': {'class': 'form-control'} }) }}
             {{ form_errors(form.typeSol) }}
         </div>
-
-        <div class="col-md-6 mb-3">
-            {{ form_label(form.utilisateurId) }}
-            {{ form_widget(form.utilisateurId, { 'attr': {'class': 'form-control'} }) }}
-            {{ form_errors(form.utilisateurId) }}
-        </div>
     </div>
 
     <div class="d-flex justify-content-end">
         <button type="submit" class="btn btn-primary">
-            <i class="bi bi-save"></i> {{ button_label|default('Save') }}
+            <i class="bi bi-save"></i> {{ button_label|default('Sauvegarder') }}
         </button>
     </div>
 </div>
